fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/Open_Orders__c.object-meta.xml
<CustomObject>
    <label>Open Orders</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Open Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>