fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Open Orders</relationshipLabel>
    <relationshipName>Open_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>