fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Account_Material_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Material_Key__c</fullName>
    <externalId>true</externalId>
    <label>Account Material Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>