fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>if(AND(
Business_Unit__c = &quot;Interventional&quot;,
ISBLANK(Account__c)
), &quot;Interventional Adjustment&quot;,
Account__r.Name &amp; &quot; (&quot; &amp; Account__r.SAP_Sold_To__c &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>