fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Alt_Product_1_Stock__c.field-meta.xml
<CustomField>
    <fullName>Alt_Product_1_Stock__c</fullName>
    <label>Sub #1 Weeks on Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>