fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/ASR__c.field-meta.xml
<CustomField>
    <fullName>ASR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ASR</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Open Orders (ASR)</relationshipLabel>
    <relationshipName>Open_Orders_ASR</relationshipName>
    <type>Lookup</type>
</CustomField>