fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Back_Order_Qty__c.field-meta.xml
<CustomField>
    <fullName>Back_Order_Qty__c</fullName>
    <label>Back Order Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>