fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Back_Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Back_Order_Total__c</fullName>
    <label>Back Order Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>