fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Back_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Back_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Ordered</label>
    <type>Checkbox</type>
</CustomField>