fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Back_Ordered_YesNo__c.field-meta.xml
<CustomField>
    <fullName>Back_Ordered_YesNo__c</fullName>
    <formula>if(Back_Ordered__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Back Ordered?</label>
    <type>Text</type>
</CustomField>