fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <formula>HYPERLINK(&quot;https://teleflex.my.salesforce.com/sfc/p/E0000000K31h/a/440000001LRC/eeqjt61Q8RlUeGJy4XUbxaRNZsSN_kHRrPRgBGuDLhU&quot;, 

if(NOT(ISBLANK(Order_Delivery_Block_Reason__c)), Order_Delivery_Block_Reason__c &amp; BR(), NULL) &amp; 
if(NOT(ISBLANK(Schedule_Line_Block_Reason__c)), Schedule_Line_Block_Reason__c &amp; BR(), NULL) &amp; 
if(NOT(ISBLANK(Status_Credit_Check_Reason__c)), Status_Credit_Check_Reason__c, NULL) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blocked Reason</label>
    <type>Text</type>
</CustomField>