fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Blocked_Reason_Count__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason_Count__c</fullName>
    <formula>if(Order_Delivery_Block_Reason__c != NULL, 1, 0) +
if(Schedule_Line_Block_Reason__c != NULL, 1, 0) +
if(Status_Credit_Check_Reason__c != NULL, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blocked Reason Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>