fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Check_Territory_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Territory_Number__c</fullName>
    <formula>AND(
Territory_Number__c = Territory__r.Territory_Number__c,
NOT(ISBLANK(Territory_Number__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Territory Number</label>
    <type>Checkbox</type>
</CustomField>