fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <formula>/* TRUE if there is not a related Compensation Record */
NOT(ISBLANK(Compensation_Rules__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compensation</label>
    <type>Checkbox</type>
</CustomField>