fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Compensation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Rules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compensation Rule</label>
    <referenceTo>Compensation_Rules__c</referenceTo>
    <relationshipLabel>Open Orders</relationshipLabel>
    <relationshipName>Open_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>