fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Compensation_Type__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Type__c</fullName>
    <label>Compensation Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>