fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/DNA__c.field-meta.xml
<CustomField>
    <fullName>DNA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DNA</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Open Orders (DNA)</relationshipLabel>
    <relationshipName>Open_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>