fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/IDN__c.field-meta.xml
<CustomField>
    <fullName>IDN__c</fullName>
    <formula>Account__r.IDN__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDN</label>
    <type>Text</type>
</CustomField>