fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/IDN_Region_Text__c.field-meta.xml
<CustomField>
    <fullName>IDN_Region_Text__c</fullName>
    <label>IDN Region Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>