fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/KAM__c.field-meta.xml
<CustomField>
    <fullName>KAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KAM</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Open Orders (KAM)</relationshipLabel>
    <relationshipName>Open_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>