fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Number__c</fullName>
    <label>Line Item Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>