fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Manual_Sub_Values__c.field-meta.xml
<CustomField>
    <fullName>Manual_Sub_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Sub Values</label>
    <type>Checkbox</type>
</CustomField>