fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Material_Key__c.field-meta.xml
<CustomField>
    <fullName>Material_Key__c</fullName>
    <label>Material Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>