fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Order_Delivery_Block__c.field-meta.xml
<CustomField>
    <fullName>Order_Delivery_Block__c</fullName>
    <label>Order Delivery Block</label>
    <length>10</length>
    <type>Text</type>
</CustomField>