fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>