fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <inlineHelpText>This is Net Value!</inlineHelpText>
    <label>Order Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>