fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Original_Currency__c.field-meta.xml
<CustomField>
    <fullName>Original_Currency__c</fullName>
    <label>Original Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>