fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Open Orders (Parent Account)</relationshipLabel>
    <relationshipName>Open_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>