fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Parent_Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Key__c</fullName>
    <label>Parent Account Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>