fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Parent_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Name__c</fullName>
    <formula>if(NOT(ISBLANK(Parent_Account__r.Distributor_Name__c)), Parent_Account__r.Distributor_Name__c,
if(NOT(ISBLANK(Parent_Account__r.Name)), Parent_Account__r.Name &amp; &quot; (&quot; &amp; Parent_Account__r.SAP_Sold_To__c &amp; &quot;)&quot;,
NULL
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Name</label>
    <type>Text</type>
</CustomField>