fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Parent_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_SAP_Code__c</fullName>
    <description>Parent Account SAP Code</description>
    <inlineHelpText>Parent Account SAP Code</inlineHelpText>
    <label>Parent SAP Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>