fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/PO_Value__c.field-meta.xml
<CustomField>
    <fullName>PO_Value__c</fullName>
    <inlineHelpText>Total of Backed Orders Items by PO Number</inlineHelpText>
    <label>Remaining PO Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>