fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Primary_GPO__c.field-meta.xml
<CustomField>
    <fullName>Primary_GPO__c</fullName>
    <formula>TEXT(Account__r.Main_GPO__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary GPO</label>
    <type>Text</type>
</CustomField>