fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Open Orders</relationshipLabel>
    <relationshipName>Open_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>