fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Product_on_Hand__c.field-meta.xml
<CustomField>
    <fullName>Product_on_Hand__c</fullName>
    <formula>Product__r.Valuated_Unrestricted_Use_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product on Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>