fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Release_Qty__c.field-meta.xml
<CustomField>
    <fullName>Release_Qty__c</fullName>
    <formula>Product__r.Release_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>