fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <formula>if(NOT(ISBLANK(Territory__r.Manager__c)),Territory__r.Manager_Name__c,
if(AND(NOT(ISBLANK(Territory__r.Parent_Territory__r.Sales_Rep__c)),Territory__r.Parent_Territory__r.Primary_Sales_Rep_Flip__c = FALSE),Territory__r.Parent_Territory__r.Sales_Rep_Name__c,
if(NOT(ISBLANK(Territory__r.Parent_Territory__r.Primary_Territory_User__c)),Territory__r.Parent_Territory__r.Primary_Territory_User_Name__c,
NULL
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager</label>
    <type>Text</type>
</CustomField>