fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Sales_Overlay__c.field-meta.xml
<CustomField>
    <fullName>Sales_Overlay__c</fullName>
    <formula>if(KAM__c &lt;&gt; NULL,&quot;KAM Sales&quot;,
if(DNA__c &lt;&gt; NULL,&quot;DNA Sales&quot;,
/* Default */
&quot;None&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Overlay</label>
    <type>Text</type>
</CustomField>