fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Sales_Overlay_ASR__c.field-meta.xml
<CustomField>
    <fullName>Sales_Overlay_ASR__c</fullName>
    <formula>if(ASR__c &lt;&gt; NULL,&quot;ASR Sales&quot;, 
/* Default */ 
&quot;None&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Overlay ASR</label>
    <type>Text</type>
</CustomField>