fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Schedule_Line_Block__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Line_Block__c</fullName>
    <label>Schedule Line Block</label>
    <length>10</length>
    <type>Text</type>
</CustomField>