fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when the Sales Rep related to the territory is inactive and the Sales Manager is used instead.</inlineHelpText>
    <label>Secondary Owner</label>
    <type>Checkbox</type>
</CustomField>