fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <length>25</length>
    <type>Text</type>
</CustomField>