fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Status_Credit_Check_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Credit_Check_Reason__c</fullName>
    <formula>CASE(Status_Credit_Checks__c, 
&quot;B&quot;, &quot;Credit Review - &quot; &amp; Payment_Terms__c, 
NULL 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Credit Check Reason</label>
    <type>Text</type>
</CustomField>