fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Status_Credit_Checks__c.field-meta.xml
<CustomField>
    <fullName>Status_Credit_Checks__c</fullName>
    <label>Status Credit Checks</label>
    <length>10</length>
    <type>Text</type>
</CustomField>