fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Sub_1__c.field-meta.xml
<CustomField>
    <fullName>Sub_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub #1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Open Orders (Sub 1)</relationshipLabel>
    <relationshipName>Open_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>