fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Sub_2__c.field-meta.xml
<CustomField>
    <fullName>Sub_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub #2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Open Orders (Sub 2)</relationshipLabel>
    <relationshipName>Open_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>