fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Sub_2_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_2_Status__c</fullName>
    <label>Sub #2 Constraint Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>