fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Sub_3__c.field-meta.xml
<CustomField>
    <fullName>Sub_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub #3</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Open Orders (Sub 3)</relationshipLabel>
    <relationshipName>Open_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>