fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Subs_2_Product_on_Hand__c.field-meta.xml
<CustomField>
    <fullName>Subs_2_Product_on_Hand__c</fullName>
    <label>Subs #2 Product on Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>