fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Open Orders</relationshipLabel>
    <relationshipName>Open_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>