fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Territory_Guess__c.field-meta.xml
<CustomField>
    <fullName>Territory_Guess__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used the BU from the Compensatory Rule and Sales Accounts to &apos;Guess&apos; the territory.</inlineHelpText>
    <label>Territory Guess</label>
    <type>Checkbox</type>
</CustomField>