fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Territory_Number_Old__c.field-meta.xml
<CustomField>
    <fullName>Territory_Number_Old__c</fullName>
    <label>Territory Number Old</label>
    <length>10</length>
    <type>Text</type>
</CustomField>