fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Territory_Validated__c.field-meta.xml
<CustomField>
    <fullName>Territory_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set once the Apex fires and validates the territory.</description>
    <label>Territory Validated</label>
    <type>Checkbox</type>
</CustomField>