fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Total_Qty_Back_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_Back_Ordered__c</fullName>
    <inlineHelpText>Total Qty Number on Backorder by Product Name</inlineHelpText>
    <label>Total Qty Allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>