fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/fields/Weeks_on_Hand__c.field-meta.xml
<CustomField>
    <fullName>Weeks_on_Hand__c</fullName>
    <formula>Product__r.Weeks_On_Hand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks on Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>