fullSandbox11072023/force-app/main/default/objects/Open_Orders__c/listViews/Open_Orders_on_Constraint.listView-meta.xml
<ListView>
    <fullName>Open_Orders_on_Constraint</fullName>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>PO_Number__c</columns>
    <columns>Order_Quantity__c</columns>
    <columns>Order_Total__c</columns>
    <columns>SAP_Code__c</columns>
    <columns>Sales_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Blocked_Reason__c</field>
        <operation>contains</operation>
        <value>Constraint</value>
    </filters>
    <label>Open Orders on Constraint</label>
</ListView>